# phd-notebook

./: .gitignore  4 Bar.ipynb  Analytical Cyber Attack - Lyapunov.ipynb  Analytical Cyber Attack - Pendulum Nonlinear Lyap.ipynb  Balance-bot - 2DOF Analysis.ipynb  Balance-bot - Mode Test.ipynb  Balance-bot - Model Parameters.ipynb  Balance-bot - Motor System ID.ipynb  Balance-bot - Pendulum System ID.ipynb  Bird - FWAV - Final Data.ipynb  Bird - FWAV Data.ipynb  Bird - Firewing Data.ipynb  DI + Lyap.ipynb  Flow Tubes.ipynb  LMI L Infinity Gain.ipynb  LMI Reach.ipynb  Mechanical Lagrangian.ipynb  Nonlinear Lyapunov.ipynb  Segway 2DOF.html  Taylor Series Error Bound.ipynb  daqutil.py  inv_pend_dynamics.py  lmi_bisim.py  pylama.ini  pyproject.toml  sympy_utils.py  sysid_motor.pkl  sysid_pend.pkl  to_slides.sh
arduino-mag-sketchbook/Wing_Mag/: Wing_Mag.ino
arduino-mag-sketchbook/libraries/: HMC5843
calibration/: FT15818.cal  FT15819.cal
data/: no_wind.pkl  wind.pkl
data/fwav/: flapping_test1.txt  test1_nsh_log.txt  test2_log.txt  test3_log.txt
data/fwav_learn/: flap_test_fast_nsh_bestfit_update.txt  flap_test_fast_parameters.txt  flap_test_slow_nsh.txt  flap_test_slow_nsh_bestfit_update.txt  flap_test_slow_parameters.txt  glide_learn_slow_nsh.txt~  glide_test_fast_nsh.txt  glide_test_fast_parameters.txt  glide_test_slow_nsh.txt  glides_test_slow_parameters.txt
iekf/: Lyap.ipynb  Reachable.ipynb  env
my_util/: px4_logutil.py  sympy_util.py
pylmibisim/: lmi.py  version.py
pylmibisim/polylyap/: dynamics.py  (+5 more)
scripts/: git_hooks.sh  nb_to_html.sh  nb_to_latex.sh
(+56 files in other folders)
