[tool.poetry]
name = "phd-notebook"
version = "0.1.0"
description = ""
authors = ["James Goppert <james.goppert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
picos = "^2.5.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
control = "^0.10.1"
pyhull = "^2015.2.1"
sympy = "^1.13.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
